--- a/vagrant/spark/files/systemd/jupyter-notebook.service
+++ b/vagrant/spark/files/systemd/jupyter-notebook.service
@@ -1,3 +1,12 @@
+#
+# Systemd script to manage Jupyter Notebook.
+#
+# Copyright 2016, Frederico Martins
+#   Author: Frederico Martins <http://github.com/fscm>
+#
+# SPDX-License-Identifier: MIT
+#
+
 [Unit]
 Description=Jupyter Notebook
 After=network.target network-online.target
