--- a/vagrant/spark/files/systemd/spark-history.service
+++ b/vagrant/spark/files/systemd/spark-history.service
@@ -1,3 +1,12 @@
+#
+# Systemd script to manage Spark History.
+#
+# Copyright 2016, Frederico Martins
+#   Author: Frederico Martins <http://github.com/fscm>
+#
+# SPDX-License-Identifier: MIT
+#
+
 [Unit]
 Description=Spark History
 After=network.target network-online.target
